@@ -543,106 +543,3 @@ namespaceConvertData <- function(data, modelname) {
 	}
 	return(data)
 }
-
-namespaceSearch <- function(model, namespace, name, flat = FALSE) {
-	if (is.na(name) || is.null(name) || identical(name, "")) {
-		return(NULL)
-	}
-	if (namespace == model@name) {
-		if (name == model@name) {
-			return(model)
-		} else if (name %in% names(omxReservedNames) && 
-			!is.null(omxReservedNames[[name]]@search)) {
-			return(omxReservedNames[[name]]@search(model))
-		}
-		first <- model@matrices[[name]]
-		second <- model@algebras[[name]]
-		third <- model@submodels[[name]]
-		fourth <- model@constraints[[name]]
-		if (flat) { fifth <- model@objectives[[name]] }
-		else { fifth <- NULL }
-		if (!is.null(model@objective) && name == model@objective@name) {
-			return(model@objective)
-		} else if (!is.null(model@data) && name == model@data@name) {
-			return(model@data)
-		} else if (!is.null(first)) {
-			return(first)
-		} else if (!is.null(second)) {
-			return(second)
-		} else if (!is.null(third)) {
-			return(third)
-		} else if (!is.null(fourth)) {
-			return(fourth)
-		} else {
-            return(fifth)
-        }
-	} else {
-		if (length(model@submodels) == 0) {
-			return(NULL)
-		}
-		recursive <- lapply(model@submodels, 
-			function(x) { namespaceSearch(x, namespace, name) })
-		target <- which(!sapply(recursive, is.null))
-		if (length(target) == 0) {
-			return(NULL)
-		} else if (length(target) == 1) {
-			return(recursive[[target]])
-		} else {
-			stop(paste("There are two named entities",
-				"that matched to the identifier",
-				omxQuotes(omxIdentifier(namespace, name))),
-				call. = FALSE)
-		}
-	}
-}
-
-namespaceSearchReplace <- function(model, namespace, name, value) {
-	if (namespace == model@name) {
-		if (name == model@name) {
-			return(value)
-		} else if (name %in% names(omxReservedNames) && 
-			!is.null(omxReservedNames[[name]]@replace)) {
-			return(omxReservedNames[[name]]@replace(model, value))
-		}
-		current <- model[[name]]
-		if (is.null(current) && is.null(value)) {
-			return(model)
-		}
-		if(name == model@name) {
-			stop(paste(omxQuotes(name), 
-				"is already used as the name of the model"), call. = FALSE)
-		}
-		if(!is.null(current) && !is.null(value) && 
-				!omxSameType(current, value)) {
-			stop(paste("There already exists an object", 
-					omxQuotes(name), 
-					"in this model of different type"), call. = FALSE)
-		}
-		if(!is.null(value)) {
-			value@name <- name
-			test <- value
-		} else {
-			test <- current
-		}
-		if (is(test,"MxMatrix")) {
-			model@matrices[[name]] <- value
-		} else if (is(test,"MxAlgebra")) {
-			model@algebras[[name]] <- value
-		} else if (is(test,"MxModel")) {
-			model@submodels[[name]] <- value	
-		} else if (is(test,"MxObjective")) {
-			model@objective <- value
-		} else if (is(test,"MxData")) {
-			model@data <- value
-		} else if (is(test,"MxConstraint")) {
-			model@constraints[[name]] <- value
-		} else {
-			stop(paste(test, "is of unknown value for replacement using name",
-				name, "in model", model@name), call. = FALSE)
-		}
-	} else {
-		model@submodels <- lapply(model@submodels,
-			function(x) { namespaceSearchReplace(x, namespace, name, value) })
-	}
-	return(model)
-}
