@@ -7,6 +7,7 @@ trunk
 * not allowing the following forbidden characters in names or labels: "+-!~?:*/^%<>=&|$"
 * added timestamp to summary() output
 * reimplemented summary() function to handle unused data rows, and independent submodels
+* reimplemented names(model), model$foo, and model$foo <- value to return all components of a model tree
 
 Release 0.2.9-1147
 ==================
